# todo-list-turborepo

./: .commitlintrc.cjs  .dockerignore  .editorconfig  .env.example  .env.test  .gitignore  .gitmodules  .lintstagedrc.cjs  .npmrc  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.playwright  LICENSE  MIGRATION_COMPLETE.md  Makefile  README.md  SECURITY.md  STORYBOOK_GUIDELINES.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.devcontainer/: Dockerfile  README.md  bashrc  devcontainer.json  post-create.sh  post-start.sh  zshrc
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: chromatic.yml  ci.yml  codeql-analysis.yml  codeql.yml  deploy-api.yml  deploy-web.yml  npm-audit.yml  storybook-mobile.yml  ui-mobile-e2e.yml  ui-mobile-performance.yml  visual-regression.yml
.husky/: pre-commit  pre-push
.kiro/hooks/: auto-commit-completion.kiro.hook  commit-all-changes.kiro.hook  dependency-installer.kiro.hook  ensure-builds-passing.kiro.hook  unit-test-runner.kiro.hook
.kiro/specs/base-foundry-migration/: design.md  requirements.md  tasks.md
.kiro/specs/blockchain-dev-environment-fix/: design.md  requirements.md  tasks.md
.kiro/specs/blockchain-expansion-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/dependency-modernization/: design.md  requirements.md  tasks.md
.kiro/specs/linting-configuration-fix/: design.md  requirements.md  tasks.md
.kiro/specs/mobile-design-system/: design.md  requirements.md  tasks.md
.kiro/specs/mobile-ui-eva-design-integration/: design.md  requirements.md  tasks.md
.kiro/specs/monorepo-modernization/: design.md  requirements.md  tasks.md
.kiro/specs/project-modernization/: design.md  requirements.md  tasks.md
.kiro/specs/storybook-stories-implementation/: design.md  requirements.md  tasks.md
.kiro/specs/ui-mobile-storybook-playwright-automation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.windsurf/rules/: package-changes-follow-up.md
apps/api/: .env.example  .eslintrc.js  Dockerfile  Dockerfile.test  README.md  TELEMETRY.md  cleanup.sh  eslint.config.js  instrumentation.ts  jest.config.js  next.config.js  package.json  tsconfig.build.json  tsconfig.json
apps/api/src/: app.controller.js  (+8 more)
apps/blockchain-smart-contracts/: Dockerfile  hardhat.config.ts  package.json
apps/blockchain-smart-contracts/polkadot/pallet-todo/: Cargo.toml
apps/contracts/: package.json
apps/contracts/solana/programs/todo-program/: Cargo.toml
apps/ingestion/: .env.example  .eslintrc.js  Dockerfile  cleanup.sh  eslint.config.js  jest.config.js  package.json  tsconfig.json
apps/mobile/: .env.example  .eslintrc.js  App.tsx  DESIGN_SYSTEM_MIGRATION.md  Dockerfile  README.md  THEME_ARCHITECTURE.md  app.json  babel.config.js  cleanup.sh  clear-theme.js  eslint.config.js  jest.config.js  migrations-from-old-to-new.md  nginx.conf  package.json  playwright.config.ts  tsconfig.json
apps/smart-contracts/: .env.example  .solhint.json  Dockerfile  README.md  cleanup.sh  hardhat.config.ts  package.json
apps/smart-contracts/polkadot/runtime/: Cargo.toml
apps/smart-contracts/solana/programs/todo-program/: Cargo.toml
apps/smart-contracts/solana/programs/todo-program/src/: lib.rs
apps/web/: .env.example  .eslintrc.js  Dockerfile  Dockerfile.test  README.md  cleanup.sh  eslint.config.js  jest.config.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  test2.css  test3.css  tsconfig.json  vite.config.ts  vitest.config.ts
db/: .env.example  README.md  init-mongo.js  migrate-mongo-config.js  migrate.js  seed-todos.js  setup.js
db/migrations/: 20240101000000-create-todos-collection.js  20240102000000-create-users-collection.js  20240103000000-add-blockchain-features.js
devcontainer/: Dockerfile  README.md
docs/: BASE_SETUP.md  BLOCKCHAIN_COMMANDS.md  BLOCKCHAIN_SETUP.md  BUILD_LOGGING.md  COMPONENT_DEVELOPMENT_WORKFLOW.md  DAISYUI_STYLE_DICTIONARY_INTEGRATION.md  DEPLOYMENT.md  ELASTICSEARCH.md  FAQ.md  MONOREPO-TEMPLATE-GUIDE.md  MOONBEAM_SETUP.md  TESTING.md  THEME_SYSTEM_CLEANUP.md  TOKEN_MANAGEMENT_GUIDE.md  TROUBLESHOOTING.md  web-parity-checklist.md
infra/k8s/: README.md  deploy.sh  resource-management.yaml
infra/kubernetes/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  deploy.sh  ingestion-deployment.yaml  ingress.yaml  mobile-web-deployment.yaml  mongodb-deployment.yaml  mongodb-secret.yaml  monitoring.yaml  namespace.yaml  rbac.yaml  redis-deployment.yaml  resource-management.yaml  secrets.yaml  services.yaml  web-deployment.yaml  web-service.yaml
infra/nginx/: nginx.conf
infra/otel-collector/: otel-collector-config.yml
infra/prometheus/: prometheus.yml
infra/redis/: redis.conf
scripts/: DEPLOYMENT.md  DEVELOPMENT.md  README-install-blockchain-tools.md  README.md  aggregate-test-results.js  blockchain-deps-check.sh  blockchain-help.sh  build-contracts.sh  build-logger.sh  build-production.sh  build-quick.sh  build.sh  cleanup.sh  demo-logging.sh  deploy-contracts.sh  deploy-development.sh  deploy-production.sh  deploy-staging.sh  deploy.sh  dev-backend.sh  dev-blockchain.sh  dev-frontend.sh  dev-services.sh  install-blockchain-tools.bat  install-blockchain-tools.sh  interactive-help.sh  publish-packages.sh  startDev.sh  test-install-blockchain-tools.sh  test-logging.sh  test-package-installation.sh  validate-packages.sh  verify-dependencies.sh
scripts/troubleshooting/: anchor-setup.md  interactive-help-guide.md  platform-installation.md  rust-setup.md  solana-setup.md
test/dependency-management/: README.md  jest.config.js  run-tests.sh  setup.js  validation.test.js
test/integration/: README.md  blockchain-expansion-integration.test.ts  env-setup.ts  global-setup.ts  global-teardown.ts  jest.config.js  mobile-blockchain-integration.test.ts  results-processor.js  setup.ts  web-blockchain-integration.test.ts  web-parity-flows.test.ts
(+327 files in other folders)
