[package]
name = "todo-program"
version = "0.1.0"
description = "Solana program for decentralized todo storage"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "todo_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "4.0.0"